# ticket-management

./: .gitignore  CHANGELOG.md  LICENSE  README.md  gen-ts.sh  install.sh  test.sh  ticket-management.cabal  ticket-manager
app/: Main.hs
cli/: Main.hs
frontend/: package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: .App.css.swp  Api.ts  App.css  App.tsx
server/: Main.hs
src/: Imports.hs  TicketManager.hs
src/Data/: Ticket.hs
src/Web/Ticket/: Api.hs  Server.hs
test/: Test.hs
