cabal-version:      2.4
name:               ticket-management
version:            0.1.0.0
author:             Samuel Schlesinger
maintainer:         samuel@simspace.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Data.Ticket, TicketManager
    other-modules:    Imports
    build-depends:
      base >=4.4 && <5,
      text ^>=1.2.4.1,
      time ^>=1.9.3,
      containers ^>=0.6,
      unliftio ^>=0.2.19,
      cereal ^>=0.5.8.1,
      bytestring ^>=0.10,
      optparse-applicative ^>=0.16.1.0,
      directory ^>=1.3.6.1,
      QuickCheck ^>=2.14.2
    hs-source-dirs:   src
    ghc-options: -Wall
    default-language: Haskell2010

executable ticket-manager
    main-is: Main.hs
    hs-source-dirs: app
    build-depends:
      base, ticket-management
    default-language: Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base >= 4.4 && < 5,
                       text >=1.2 && < 2,
                       QuickCheck ^>=2.14,
                       ticket-management                 
  default-language:    Haskell2010
