cabal-version:      2.4
name:               ticket-management
license:            MIT
synopsis:           A basic implementation of a personal ticket management system
description:        A basic implementation of a personal ticket management system.
version:            0.4.0.0
author:             Samuel Schlesinger
category:           Development
maintainer:         samuel@simspace.com
extra-source-files: CHANGELOG.md, README.md

source-repository head
  type: git
  location: https://github.com/samuelschlesinger/ticket-management

library
    exposed-modules:  Data.Ticket, TicketManager, Web.Ticket.Api, Web.Ticket.Server
    other-modules:    Imports
    build-depends:
      base >=4.4 && <5,
      wai-extra ^>=3.1.6,
      sop-core ^>=0.5,
      http-media ^>=0.8,
      text ^>=1.2.4.1,
      time ^>=1.9.3,
      containers ^>=0.6,
      unliftio ^>=0.2.19,
      cereal ^>=0.5.8.1,
      bytestring ^>=0.10,
      optparse-applicative ^>=0.16.1.0,
      directory ^>=1.3.6.1,
      QuickCheck ^>=2.14.2,
      servant ^>=0.18,
      servant-server ^>=0.18,
      wai ^>=3.2,
      warp ^>=3.3,
      aeson ^>=1.5.6.0,
      aeson-typescript ^>=0.3,
      wai-cors ^>=0.2
    hs-source-dirs:   src
    ghc-options: -Wall
    default-language: Haskell2010

executable ticket-manager
    main-is: Main.hs
    hs-source-dirs: cli
    build-depends:
      base, ticket-management
    ghc-options: -Wall
    default-language: Haskell2010

executable ticket-manager-server
    main-is: Main.hs
    hs-source-dirs: server
    build-depends:
      base, ticket-management
    ghc-options:
      -O2 -threaded -rtsopts "-with-rtsopts=-N -T"
    default-language: Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base >= 4.4 && < 5,
                       text >=1.2 && < 2,
                       QuickCheck ^>=2.14,
                       ticket-management                 
  ghc-options: -Wall
  default-language:    Haskell2010
